# cached-http-fetcher

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
cached_http_fetcher/: __init__.py  cache.py  calc_expires.py  content.py  entrypoint.py  fetcher.py  meta.py  model.py  rate_limit_fetcher.py  request.py  url_list.py
cached_http_fetcher/storage/: __init__.py  base.py  memory.py
cached_image_optimizer/: model.py
examples/: fetch_with_memory.py
src/: __init__.py  cached_image_optimizer.py  fetcher.py  model.py  request.py  url_list.py
src/storage/: __init__.py  base.py  memory.py  redis.py  s3.py
tests/: conftest.py  model.py  test_content.py  test_entrypoint.py  test_fetcher.py  test_meta.py  test_rate_limit_fetcher.py  test_request.py  test_url_list.py
tests/storage/: test_memory.py
