[metadata]
name = cached-http-fetcher
version = 0.0.1
author = Tasuku SUENAGA a.k.a. gunyarakun
author_email = tasuku-s-github@titech.ac
description= A cached http fetcher
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/gunyarakun/cached-http-fetcher

[options]
packages = find:
install_requires =
  requests
test_requires =
  pytest~=6.2.2
  pytest-cov~=2.11.1
  pytest-mock~=3.5.1
  responses~=0.13.1
  pysen~=0.9.1
setup_requires =
  pytest-runner~=5.3.0
python_requires = >=3.7

[options.packages.find]
exclude =
  tests

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov cached_http_fetcher
