[metadata]
name = cached-http-fetcher
version = 0.0.2
author = Tasuku SUENAGA a.k.a. gunyarakun
author_email = tasuku-s-github@titech.ac
description= A cached http fetcher
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/gunyarakun/cached-http-fetcher

[options]
packages = find:
install_requires =
  requests
python_requires = >=3.7

[options.extras_require]
test =
  pytest~=6.2.2
  pytest-cov~=2.11.1
  pytest-mock~=3.5.1
  responses~=0.13.1
  pysen~=0.9.1

[options.packages.find]
exclude =
  tests
